improvments in Arabic paper

--- a/Paper/IEEEarab-ar.lyx
+++ b/Paper/IEEEarab-ar.lyx
@@ -597,8 +597,8 @@ left side}{right side
 \series bold
 نظام الإحصاءات:
 \series default
- هذا الصنف يغطي كل الاحتياجات الإحصائية التي يمكن أن يريدها المستخدم في
- القرآن.
+ هذا الصنف يغطي كل الاحتياجات الإحصائية التي يمكن أن يستعلم عنها المستخدم
+ في القرآن.
  الإحصاءات مهمة في تصنيف الكلمات والآيات ويمكن استعمالها أيضا في التأكد
  من صحة المعلومات التي يؤشر لها بمعجزات عددية.
  .مثلا ، البحث عن الكلمة الأكثر ورودا.
@@ -733,7 +733,7 @@ Lucene
 \begin_layout Itemize
 
 \series bold
-البحث بالجملة:
+البحث بجملة مطابقة تماما:
 \series default
  هو نوع من البحث حيث يعطي المستخدم الفرصة ليبحث عن جملة كما هي.
  مثلا: ”الحمد لله“ لإيجاد فقط الكلمات إن وردت متجاورة وبهذا الترتيب.
@@ -746,45 +746,21 @@ Lucene
 \series default
 يستعمل للبحث عن مجال من القيم في حقل رقمي.
  في حالة القرآن يفيد في حقول كرقم الآية ، رقم الصفحة،رقم الحزب، الحقول الإحصائية.
- مثلا رقم_الآية:[1 إلى 5]
-\family roman
-\series medium
-\shape up
-\size normal
-\emph off
-\bar no
-\strikeout off
-\uuline off
-\uwave off
-\noun off
-\color none
- 
-\family default
-\series default
-\shape default
-\size default
-\emph default
-\bar default
-\strikeout default
-\uuline default
-\uwave default
-\noun default
-\color inherit
-للبحث لإيجاد الآيات الخمس الأولى من كل سورة.
+ مثلا رقم_الآية:[1 إلى 5] لإيجاد الآيات الخمس الأولى من كل سورة.
 \end_layout
 
 \begin_layout Itemize
 
 \series bold
-العبارات النمطية (
+التعابير النمطية (
 \lang english
 Regex
 \lang arabic_arabi
 ): 
 \series default
 توفّر وسيلة موجزة ومرنة للتعرف على السلاسل النصية.
- سلبية واحدة حول العبارات النمطية هي أنّ أيّ مستخدم عادي يجد صعوبة في التعامل
- معها.
+ السلبية الأبرز حول التعابير النمطية هي أنّ أيّ مستخدم عادي يجد صعوبة في
+ التعامل معها.
  مثلا 
 \emph on
 [من ا]، 
@@ -818,8 +794,8 @@ Wildcards
 ): 
 \series default
 تستعمل في البحث عن مجموعة كلمات تشترك في عدة حروف وتمثل طريقة مثلى لتجنب
- تعقيد العبارات النمطية.
- هذه الميزة تنوب عن البحث بجزء من الكلمة.
+ تعقيد التعبير النمطية.
+ هذه المزيّة تنوب عن البحث بجزء من الكلمة.
  في اللاتينية، يوجد رمزي بدل بصفة واسعة : ? تنوب عن حرف واحد، * تنوب عن
  عدد غير معيّن من الحروف .
  مثلا ب؟طة لتوليد بسطة، بصطة و *نبي* لتوليد نبي ، النبيين ، الأنبياء ...
@@ -898,7 +874,7 @@ relevance
 \series bold
 ترتيب النتائج: 
 \series default
-يساعد المستخدم في الوصول إلى نتائج بأي ترتيب يريد و من المعايير التي يمكن
+يساعد المستخدم على الوصول إلى نتائج بأي ترتيب يريد و من المعايير التي يمكن
  اتباعها في الترتيب توجد: وثاقة الصلة، ترتيب المصحف، زمن التنزيل، الترتيب
  الرقمي، الترتيب الألفبائي أو الأبجدي.
 \end_layout
@@ -923,7 +899,11 @@ relevance
 \begin_layout Itemize
 
 \series bold
-عرض النتائج في الوقت الراهن
+عرض النتائج
+\series default
+ 
+\series bold
+آنيا
 \series default
 : تستعمل لتجنيب المستخدم الانتظار خلال عملية البحث حيث تعرض كل نتيجة فور
  إيجادها.
@@ -935,7 +915,7 @@ relevance
 \series bold
 تجميع النتائج: 
 \series default
-تستعمل هذه المزية في توفير أفضل استعراض للنتائج لأن تبني الآية كوحدة لا
+تستعمل هذه المزية في توفير أفضل استعراض للنتائج لأن تبنِّي الآية كوحدة لا
  يعتبر دائما الخيار الأفضل للمستخدمين.
  أحيانا تجميع هاته الآيات حسب السورة أو الموضوع يكون أحسن.
  المعايير التي يمكن استعمالها للتجميع هي: حسب السورة، حسب ترابط التفسير،
@@ -947,10 +927,10 @@ relevance
 \series bold
 عرض الآيات بالخط العثماني كامل الرموز: 
 \series default
-القرآن مكتوب في المصحف بالخط العثماني زاخر بالرموز التي تساعد في قراءة وتلاوة
- القرآن بطريقة صحيحة .
- تجعل عرض هذه الرموز قد يسبب بعض الغموض عند التلاوة مثلا رموز الوقف تعلمنا
- متى لا يمكننا الوقف ومتى يمكن ومتى يجب.
+القرآن مكتوب في المصحف بالخط العثماني الزاخر بالرموز التي تساعد في قراءة
+ وتلاوة القرآن بطريقة صحيحة .
+ وقد يكون عرض هذه الرموز سببا في بعض الغموض عند التلاوة مثلا رموز الوقف
+ تعلمنا متى لا يمكننا الوقف ومتى يمكن ومتى يجب.
 \end_layout
 
 \end_deeper
@@ -1167,7 +1147,7 @@ l
 \begin_layout Itemize
 
 \series bold
-التهجية الانجليزية: 
+التهجئة الانجليزية: 
 \series default
 يحتاجها غالبا الغير الناطقين باللغة العربية الذين لا يجيدون التعامل مع الحروف
  و المفاتيح العربية.
@@ -1648,8 +1628,8 @@ Arabizi
 \series bold
 الإدخال الصوتي: 
 \series default
-هذه المزيّة تستهدف العميان من المستخدمين لتمكينهم من البحث بسهولة.
- مفيدة أيضا في الهواتف الذكية أين تكون لوحة المفاتيح صغيرة وصعبة الاستعمال.
+هذه المزيّة تستهدف المكفوفين من المستخدمين لتمكينهم من البحث بسهولة.
+ مفيدة أيضا في الهواتف الذكية أين تكون لوحة المفاتيح صغيرة وصعبة الاستخدام.
  
 \end_layout
 
@@ -2123,7 +2103,7 @@ mercy
 \series bold
 البحث بالكلمات المرتبطة دلاليا: 
 \series default
-هذه المزية تنم عن دعم كلمة مفتاحية بمجموعة من كلمات ذات علاقة دلالية بها.
+هذه المزية تتعلق بتدعيم كلمة مفتاحية بمجموعة من كلمات ذات علاقة دلالية بها.
  هناك عدة أنواع من الروابط الدلالية: المترادفات، الأضداد،
 \lang english
  Hypernym, Hyponymy, Meronymy, Holonymy, Troponymy
@@ -2349,8 +2329,8 @@ mercy
 \series bold
 تردد الكلمة بتشكيلها: 
 \series default
-مزية كالمزية السابقة لكن مع أخذ التشكيل بعين الإعتبار وهذا ما سيميز - مثلا
- - بين مِنْ ، مَنْ ، مَنَّ.
+مزية مشابهة المزية السابقة لكن مع أخذ التشكيل بعين الاعتبار وهذا ما سيميز
+ - مثلا - بين مِنْ ، مَنْ ، مَنَّ.
 \end_layout
 
 \begin_layout Itemize
@@ -2358,8 +2338,8 @@ mercy
 \series bold
 تردد الكلمة حسب مستويات اشتقاقها: 
 \series default
-مزية كالمزية السابقة لكن بدل حساب تردد الكلمة كما وردت، تحسب تردداتها دون
- زوائدها أو بإرجاعها إلى مصدرها أو جذرها.
+مزية مشابهة المزية السابقة لكن بدل حساب تردد الكلمة كما وردت، تحسب تردداتها
+ دون زوائدها أو بإرجاعها إلى مصدرها أو جذرها.
 \end_layout
 
 \begin_deeper
