--- a/thesis/flyleaf.lyx
+++ b/thesis/flyleaf.lyx
@@ -337,11 +337,13 @@ CHELLI
 \begin_inset Text
 
 \begin_layout Itemize
-PR Amar BALLA
+Pr.
+ Amar BALLA
 \end_layout
 
 \begin_layout Itemize
-MR Taha ZERROUKI
+Mr.
+ Taha ZERROUKI
 \end_layout
 
 \end_inset
