--- a/thesis/styles/esi_memoire.sty
+++ b/thesis/styles/esi_memoire.sty
@@ -26,7 +26,7 @@
 \def\BSML{\begin{center}\char"FB51 \char"FB52 \char"FB53\end{center}}
 
 \rhead{\thepage}
-\lhead{\footnotesize\it{\leftmark}}
+\lhead{\footnotesize\it{\\leftmark}}
 \chead{\footnotesize\it}
 \cfoot{}
 
@@ -124,7 +124,7 @@
 \fancyhf{}
 \fancyfoot[R]{\footnotesize \thepage}
 \fancyhead[R]{\em \footnotesize \leftmark}
-\fancyhead[L]{{\scshape  \footnotesize Chapitre }{\scshape \footnotesize \thechapter}}
+\fancyhead[L]{{\scshape  \footnotesize Chapter }{\scshape \footnotesize \thechapter}}
 \fancyfoot[C]{}
 
 \fancypagestyle{plain}{%
