--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -161,7 +161,7 @@
 }
 
 @MASTERSTHESIS{ ASSEM_MEROUANE,
-  author = {Assem Chelli and Merouane Dahmani and Amar Balla and Taha Zerrouki},
+  author = {Merouane Dahmani  and Assem Chelli and Amar Balla and Taha Zerrouki},
   title = {Développement d'un moteur de recherche et d'indexation pour les documents coraniques},
   school = {Ecole Nationale Superieure des l'Informatique (ESI) - Algiers},
   year = {2010},
