--- a/thesis/main.lyx
+++ b/thesis/main.lyx
@@ -34,8 +34,9 @@ minimalistic
 \font_tt_scale 100
 
 \graphics default
-\default_output_format default
+\default_output_format pdf4
 \output_sync 0
+\output_sync_macro "\usepackage[active]{srcltx}"
 \bibtex_command default
 \index_command default
 \float_placement H
